[package]
build = "build.rs"
name = "lang"
version.workspace = true
edition.workspace = true

[[bin]]
name = "collection"
path = "collection.rs"

[[bin]]
name = "comment"
path = "comment.rs"

[[bin]]
name = "control"
path = "control.rs"

[[bin]]
name = "data"
path = "data.rs"

[[bin]]
name = "error"
path = "error.rs"

[[bin]]
name = "function"
path = "function.rs"

[[bin]]
name = "macro"
path = "macro.rs"

[[bin]]
name = "ownership"
path = "ownership.rs"

[[bin]]
name = "sptr"
path = "smart_pointer.rs"

[[bin]]
name = "sync"
path = "sync.rs"

[[bin]]
name = "thread"
path = "thread.rs"

[[bin]]
name = "type"
path = "type.rs"

[[bin]]
name = "unsafe"
path = "unsafe.rs"

[dependencies.module]
path = "../module"

[dependencies.trpl]
version = "0.2"

[dependencies.macros]
path = "../macros"

[build-dependencies]
cc = "1.2.19"
